service2/istio_config.yaml
apiVersion: v1
kind: Service
metadata:
  name: isitosprinboot
  labels:
    app: isitosprinboot
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: isitosprinboot
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: isitosprinboot-v2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: isitosprinboot
        version: v2
    spec:
      containers:
      - name: isitosprinboot
        image: gcr.io/blogcc/springio
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---

###########################################################################
# (gateway)
##########################################################################
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: isitosprinboot-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: isitosprinboot
spec:
  hosts:
  - "*"
  gateways:
  - isitosprinboot-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: isitosprinboot
        port:
          number: 8080

---
